--- a/Doctorate_Prog/presentation/slides.tex
+++ b/Doctorate_Prog/presentation/slides.tex
@@ -234,7 +234,8 @@ theory Bar {
 
 \begin{frame}
 \frametitle{Real Example: Agda Library
-\footnote{https://github.com/agda/agda-stdlib/blob/master/src/Algebra/Morphism.agda}}
+\footnote{\tiny{ source: 
+\url{https://github.com/agda/agda-stdlib/blob/master/src/Algebra/Morphism.agda}}}}
 \begin{columns}
 	\begin{column}{0.45\textwidth}
 \begin{figure}
@@ -257,7 +258,8 @@ theory Bar {
 
 \subsection{Real Example: Isabelle Library}
 \begin{frame}[fragile]
-\frametitle{Example: Isabelle \footnote{source: \url{https://isabelle.in.tum.de/dist/library/HOL/HOL-Algebra/index.html}}}
+\frametitle{Example: Isabelle 
+\footnote{\tiny{source: \url{https://isabelle.in.tum.de/dist/library/HOL/HOL-Algebra/index.html}}}}
 \begin{columns}
 	\begin{column}{0.45\textwidth}
 		\begin{figure}
