added hilight command

--- a/Doctorate_Prog/presentation/preamble.tex
+++ b/Doctorate_Prog/presentation/preamble.tex
@@ -107,7 +107,7 @@
 
 \usepackage{adjustbox}
 
-\usepackage{agda-stdlib/latex/agda}
+%\usepackage{agda-stdlib/latex/agda}
 
 \usepackage{amssymb}
 \usepackage{bbm}
