--- a/Doctorate_Prog/presentation/slides.tex
+++ b/Doctorate_Prog/presentation/slides.tex
@@ -163,25 +163,19 @@ theory Bar {
 \frametitle{Real Example: Agda Library
 \footnote{\tiny{ source: 
 \url{https://github.com/agda/agda-stdlib/blob/master/src/Algebra/Morphism.agda}}}}
-
-\begin{columns}
-	\begin{column}{0.45\textwidth}
-\begin{figure}
-\includegraphics[scale=0.3]{agda_example/HomDef.png}
-\end{figure}
-\begin{figure}
-	\includegraphics[scale=0.3]{agda_example/MonMorph.png}
-\end{figure}
-	\end{column}
-	\begin{column}{0.45\textwidth}
-	\begin{figure}
-		\includegraphics[scale=0.3]{agda_example/ICMonMorph.png}
-	\end{figure}
-	\begin{figure}
-		\includegraphics[scale=0.3]{agda_example/groupMorph.png}
-	\end{figure}
-\end{column}
-\end{columns}
+\begin{onlyenv}<1>
+	\begin{tabular}{l}	
+		\includegraphics[scale=0.25]{agda_example/hom_def_hr.png}\\		
+		\includegraphics[scale=0.25]{agda_example/mon_morph_hr.png}\\
+		\includegraphics[scale=0.25]{agda_example/cmon_morph_hr.png}\\		
+	\end{tabular}	
+\end{onlyenv}
+\begin{onlyenv}<2>
+	\begin{tabular}{l}	
+		\includegraphics[scale=0.25]{agda_example/hom_def_hr.png}\\		
+		\includegraphics[scale=0.25]{agda_example/group_morph_hr.png}	
+	\end{tabular}	
+\end{onlyenv}		
 \end{frame}
 
 \subsection{Real Example: Isabelle Library}
