polished slides + added tp formation rules

--- a/Doctorate_Prog/presentation/preamble.tex
+++ b/Doctorate_Prog/presentation/preamble.tex
@@ -125,6 +125,8 @@
 %\DefineVerbatimEnvironment
 %{code}{Verbatim}
 
+\usepackage{prooftree1} 
+\usepackage{macros}
 
 \lstset{language=lisp,basicstyle=\ttfamily,breaklines=true,showspaces=false,showstringspaces=false,breakatwhitespace=true,texcl=true,escapeinside={\%*}{*)}}
 \tikzstyle{stuff_fill}=[rectangle,draw,fill=black!20,minimum size=1.4em]
